tests/baselines/reference/functionWithSameNameAsField.errors.txt
==== tests/cases/compiler/functionWithSameNameAsField.ts (2 errors) ====
    class TestProgressBar {
        public total: number;
        public total(total: number) {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            this.total = total;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
            ~~~~~~~~~~
!!! error TS2012: Cannot convert 'number' to '(total: number) => TestProgressBar':
!!! 	Type '(total: number) => TestProgressBar' requires a call signature, but type 'Number' lacks one.
            return this;
    ~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2000: Duplicate identifier 'total'.
    }
    